trunk/Archive2/6c/2f3e92b6839083/output
main.cpp: In instantiation of ‘void f(URNG&&) [with URNG = std::mersenne_twister_engine<long unsigned int, 64ul, 312ul, 156ul, 31ul, 13043109905998158313ul, 29ul, 6148914691236517205ul, 17ul, 8202884508482404352ul, 37ul, 18444473444759240704ul, 43ul, 6364136223846793005ul>&]’:
main.cpp:10:10:   required from here
main.cpp:5:40: error: ‘std::mersenne_twister_engine<long unsigned int, 64ul, 312ul, 156ul, 31ul, 13043109905998158313ul, 29ul, 6148914691236517205ul, 17ul, 8202884508482404352ul, 37ul, 18444473444759240704ul, 43ul, 6364136223846793005ul>&’ is not a class, struct, or union type
     typedef typename URNG::result_type rng_result;
                                        ^
